8342809: C2 hits "assert(is_If()) failed: invalid node class: Con" during IGVN due to unhandled top

Reviewed-by: roland, thartmann